2018-08-14  Alex Christensen  <achristensen@webkit.org>

        isValidCSSSelector is unsafe to be called from a non-main thread
        https://bugs.webkit.org/show_bug.cgi?id=188581
        <rdar://problem/40517358>

        Reviewed by Sam Weinig.

        * UIProcess/API/APIContentRuleListStore.cpp:
        (API::compiledToFile):
        (API::ContentRuleListStore::lookupContentRuleList):
        (API::ContentRuleListStore::getAvailableContentRuleListIdentifiers):
        (API::ContentRuleListStore::compileContentRuleList):
        (API::ContentRuleListStore::removeContentRuleList):
        (API::ContentRuleListStore::getContentRuleListSource):
        * UIProcess/API/APIContentRuleListStore.h:
        * UIProcess/API/Cocoa/WKContentRuleListStore.mm:

2018-08-14  Ansh Shukla  <ansh_shukla@apple.com>

        NSURLAuthenticationMethodOAuth challenges are surfaced to clients in -didReceiveAuthenticationChallenge as NSURLAuthenticationMethodDefault
        https://bugs.webkit.org/show_bug.cgi?id=186870
        <rdar://problem/41314410>

        Reviewed by Alex Christensen.

        Correctly expose the OAuth protection space type in API.

        * UIProcess/API/C/WKAPICast.h:
        (WebKit::toAPI):
        * UIProcess/API/C/WKProtectionSpaceTypes.h:

2018-08-14  Ben Richards  <benton_richards@apple.com>

        Remove api misuse check so that custom webcontent service identifier can be set at runtime
        https://bugs.webkit.org/show_bug.cgi?id=188579

        Reviewed by Ryosuke Niwa.

        Changed API misuse check so that a custom bundle identifier can be set at runtime with a debug flag

        * UIProcess/WebProcessPool.cpp:
        (WebKit::WebProcessPool::setCustomWebContentServiceBundleIdentifier):
        * UIProcess/WebProcessProxy.cpp:
        (WebKit::WebProcessProxy::getLaunchOptions):

2018-08-14  Antti Koivisto  <antti@apple.com>

        RemoteLayerTreeTransaction should use OptionSet for change flags